--- a/in_class/Week08/Nested_Folders/deeper_folder_1/style.css
+++ b/in_class/Week08/Nested_Folders/deeper_folder_1/style.css
@@ -1,3 +1,4 @@
-.h1{font-family: "Lucida Console", "Courier New", monospace;
+h1 {
+    font-family: "Lucida Console", "Courier New", monospace;
 }
 
