--- a/assignments/geocities/style.css
+++ b/assignments/geocities/style.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url(images_gifs/images/il_570xN.1574091017_58sb.jpg);
+    background-image: url(images_gifs/il_570xN.1574091017_58sb.jpg);
 
 }
 .butterfly-img{
