--- a/assignments/gallery/style.css
+++ b/assignments/gallery/style.css
@@ -1,9 +1,8 @@
-*{margin: 15; padding: 15;}
-@media (max-resolution: 300dpi)
-{
-    
+*{margin: 0; padding: 0;}
+
 body{font-family:'Lobster', cursive;
-background: lightgreen; }}
+background: lightgreen; }
+
 
 nav{text-align: center;
     font-size: 40px;
@@ -12,17 +11,29 @@ nav{text-align: center;
 
 .grid-gallery 
 {
-display: grid; 
-grid-template-columns: repeat(3,1fr);
-grid-gap: 1rem;
-height: 10vh;
+    display: grid; 
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    justify-items: center;
+    align-items: center;
+    grid-gap: 1rem;
+   
+
 }
+
+@media only screen and (max-width: 600px) {
+    .grid-gallery {
+        grid-template-columns: 1fr;
+        
+    }
+    
+}
+
 
 .grid-item
 {
-    width: 100%;
-    height: 100%;
-  
-   
+    object-fit: cover;
+    width: 40vmin;
+    height: 40vmin;
 }
 
