--- a/assignments/gallery/style.css
+++ b/assignments/gallery/style.css
@@ -13,27 +13,34 @@ nav{text-align: center;
 {
     display: grid; 
     grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(3, 1fr);
     justify-items: center;
     align-items: center;
     grid-gap: 1rem;
+    /* height: 100vh; */
+    
    
 
+}
+
+.grid-item
+{
+    object-fit: cover;
+    width: 30vw;
+    height: 30vw;
+   
 }
 
 @media only screen and (max-width: 600px) {
     .grid-gallery {
         grid-template-columns: 1fr;
         
+        
+    }
+
+    .grid-item {
+        width: 90vw;
+        height: 90vw;
     }
     
-}
-
-
-.grid-item
-{
-    object-fit: cover;
-    width: 40vmin;
-    height: 40vmin;
 }
 
