--- a/assignments/final_project/style.css
+++ b/assignments/final_project/style.css
@@ -1,17 +1,13 @@
 *{margin: 0; padding: 0;}
 
 body{font-family:'Lobster', cursive;
-background: pink; }
+background:peachpuff; }
 
 
 nav{text-align: center;
-    font-size: 50px;
-    background:whitesmoke;
+    font-size: 40px;
+    background:pink;
 }
-
-
-
-
 
 .grid-gallery 
 {
@@ -20,7 +16,7 @@ nav{text-align: center;
     justify-items: center;
     align-items: center;
     grid-gap: 1rem;
- 
+    /* height: 100vh; */
     
    
 
@@ -48,3 +44,15 @@ nav{text-align: center;
     
 }
 
+    
+.lightblue-column{ 
+    background-color:pink;
+    height: 100px;
+    margin: 1em;
+    text-align: center;
+    
+}
+h1{text-align: center;
+    font-size: 55px;
+
+}
